# um-agent-coder

./: .gitignore  CLAUDE.md  CLAUDE_SUBAGENT_IMPLEMENTATION.md  CODEX_GEMINI_FIX.md  Dockerfile  GEMINI.md  README.md  README_ENHANCED.md  README_ROO.md  docker-compose.yml  prompt.md  pyproject.toml  requirements.txt  test_codex_mcp.sh  test_parallel_harness.py
.Jules/: palette.md
.claude/: ralph-loop.local.md
.claude/commands/: add-tool.md  run-agent.md  test-provider.md
.data_cache/: yahoo_finance_0c981d1e1d85f7354a38ced3788d1eb2b3e50dae5517c8533c24ac3cc33739bf.json  yahoo_finance_c4d5014f509f2d1b5d1d4a7fa0d2610a89339ba942fae384d04b0010330c20cd.json
.github/: PYPI_SETUP.md
.github/workflows/: agent.yml  cd-gke.yaml  ci.yml  release.yml
.harness/: ralph_state.db  state.db
.jules/: bolt.md  palette.md
.parallel_checkpoints/: 4c0ed7af_checkpoint.json  ba6339ff_checkpoint.json  subagent_4c0ed7af_map_interactions.py
.pipeline_checkpoints/: task-e213dce83b12.json
.subagent_results/: tmpuvak_bhk.py
.task_checkpoints/: 03f85b69.json  b186b5a5.json
config/: config.local.yaml  config.yaml.example  roo_config.yaml.example
deploy/: cloudbuild.yaml  deploy.sh
docs/: ai_coder_analysis.md  autonomous-loop.md  claude_4_status.md  claude_subagent_quick_reference.md  claude_subagent_spawning.md  cost_estimation_guide.md  daemon-api.md  improvement_plan.md  mcp_enhancements_summary.md  mcp_tool_usage.md  models_quick_reference.md  query-proxy.md  ralph-loop.md
evals/budget-alerts/: eval_context.md  task.md  (+22 more)
examples/: claude_subagent_example.py  gpt5_reasoning_example.py  mcp_orchestration_example.py
goals/: example-agent-capabilities.yaml  hedge-fund-alpha.yaml  hedge-fund-build.yaml
prompts/: README.md
scripts/: eval_accuracy_test.py  eval_debug_long.py  eval_debug_raw.py  eval_iteration_003.py  eval_iteration_003_v2.py  eval_side_by_side.py  extract-oauth-creds.sh  gemini_umcfo_response.md  register_discord_commands.py  submit_budget_alerts_ab.py  submit_reporting_engine.py  submit_umcfo_multiturn.py  submit_umcfo_task.py  submit_umcfo_task_v2.py  submit_vol_regime.py  test_gemini_layer.py
specs/: INTEGRATIONS.md  README.md  ROADMAP.md  autonomous-test-roadmap.md  codex-1hr-test.md  ralph-test-roadmap.md  roadmap-hedge-fund.md  roadmap.md  todo-repo-review-action.md
src/: veo_mcp_server.py
tests/: test_data_fetchers.py  test_formatting.py  test_harness.py  test_interactive_ux.py  test_main_enhanced_ux.py  test_ralph_intelligent.py  test_router_mock.py  test_tool_registry.py  test_validators.py
(+273 files in other folders)
